--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Java-Mysql-Prj-Os.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\Eduardo\\Downloads\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar-1=C:\\Users\\Eduardo\\Documents\\NetBeansProjects\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.32.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
