--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar-1}
+    ${file.reference.mysql-connector-j-8.0.32.jar-1}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
